k8s/accounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-service
  template:
    metadata:
      labels:
        app: accounts-service
    spec:
      containers:
        - name: accounts-app
          # Важно: имя образа должно совпадать с тем, как вы его сбилдили в Docker
          image: bank-app/accounts-service:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          # Вот здесь мы связываем приложение с Базой Данных
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-service  # <-- Это имя сервиса, которое будут использовать другие сервисы
spec:
  selector:
    app: accounts-service # <-- Должно совпадать с меткой в вашем Deployment!
  ports:
    - protocol: TCP
      port: 8081         # <-- Порт, который слушает Service
      targetPort: 8080   # <-- Порт внутри контейнера
