k8s/front-ui-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-ui
  template:
    metadata:
      labels:
        app: front-ui
    spec:
      containers:
        - name: front-ui-app
          image: bank-app/front-ui:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8088 # Порт из docker-compose
---
apiVersion: v1
kind: Service
metadata:
  name: front-ui # Имя Service для front-ui
spec:
  selector:
    app: front-ui
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
